# practice_crewai

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/myproject/: crew.py  main.py
src/myproject/api/v1/endpoints/: todo.py
src/myproject/config/: agents.yaml  tasks.yaml
src/myproject/controllers/: crew_controller.py
src/myproject/core/: database.py
src/myproject/crud/: crud_todo.py
src/myproject/schemas/: todo.py
src/myproject/templates/: index.html
src/myproject/tools/: custom_tools.py
